// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Header should render Header correctly 1`] = `
<styled.header>
  Title
</styled.header>
`;

exports[`components/Header should render StyledHeader correctly 1`] = `
<header
  className="sc-AxjAm iMRwGC"
>
  Title
</header>
`;

exports[`components/Header should render StyledHeader correctly with medium prop 1`] = `
<header
  className="sc-AxjAm hVedNm"
>
  Title
</header>
`;

exports[`components/Header should render StyledHeader correctly with small prop 1`] = `
<header
  className="sc-AxjAm iPBSjx"
>
  Title
</header>
`;
